# instaprism

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: DocsWorkflow.yml  LintFormatWorkflow.yml  PreCommitWorkflow.yml  ReleaseWorkflow.yml  SecurityWorkflow.yml  TestWorkflow.yml  TypeCheckWorkflow.yml
docs/: reference.md
jupyter/: main.ipynb
src/instaprism/: __init__.py  __main__.py  _instaprism.py
src/python_package/: __init__.py  __main__.py
tests/: test_instaprism.py  test_main_functionality.py
