[project]
name = "template-python"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "returns>=0.26.0",
]

[dependency-groups]
dev = [
    "hatch>=1.16.4",
    "mkdocstrings-python>=2.0.3",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "zensical>=0.0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_package"]

[tool.hatch.version]
path = "src/python_package/__init__.py"

[tool.ruff]
# Target Python version
target-version = "py313"
# Same as Black
line-length = 88

[tool.ruff.lint]
# Enable almost all rules for maximum strictness
select = [
    "ALL",  # Enable all available rules
]

# Only ignore rules that are incompatible or overly restrictive
ignore = [
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
]

# Set complexity limits
mccabe.max-complexity = 10
pylint.max-args = 5
pylint.max-branches = 12
pylint.max-returns = 6
pylint.max-statements = 50

[tool.ruff.lint.per-file-ignores]
# Tests can have more relaxed rules
"tests/**/*.py" = [
    "S101",    # Use of assert detected
    "PLR2004", # Magic value used in comparison
    "D",       # Missing docstrings
    "ANN",     # Missing type annotations
    "ARG",     # Unused function arguments
    "FBT",     # Boolean positional arguments
]
# Scripts and configuration files
"*.py" = ["INP001"]  # Implicit namespace package (no __init__.py)

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["python_package"]

[tool.ruff.format]
# Enable the "Black-compatible" formatter
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
# Enable maximum strictness
strict = true
warn_unused_configs = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_expr = false  # Too strict for most codebases
disallow_any_decorated = false  # Too strict for most codebases
disallow_any_explicit = false  # Allow explicit Any when needed
disallow_any_generics = true
disallow_subclassing_any = true

# Disallow untyped definitions
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handling
implicit_optional = false
strict_optional = true

# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Error handling
show_error_context = true
show_column_numbers = true
show_absolute_path = true
pretty = true

# Strict equality and comparisons
strict_equality = true

# Miscellaneous strictness
allow_redefinition = false
local_partial_types = false
implicit_reexport = false

# Platform configuration
python_executable = ".venv/bin/python"

# Third-party library stubs
ignore_missing_imports = false
warn_incomplete_stub = true

# Per-module options for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "returns.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80          # Fail if coverage drops below 80%
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"
